# archivarius

./: .gitignore  .hgignore  .hgsub  .hgsubstate  BUILD  CMakeLists.txt  Dockerfile  archivarius.config  archivarius.files  archivarius.includes  archivarius.pro  build-debug.sh  build.sh  config file format.md  console-tool.cmake  docker-build.sh  lib.cmake  premake5.lua  readme.md  readme.txt  test-1s.conf  test.conf
.github/workflows/: ccpp.yml  tagged-release.yml
CI/: release.sh
archivarius/: archivarius.h  archive.c++  archive.h  buffer.h  catalogue.c++  catalogue.h  cfmt.h  checksum.h  checksumer.c++  checksumer.h  checksumer_blake2b.c++  cmd_line_parser.h  config.c++  encryption_params.c++  encryption_params.h  exception.c++  exception.h  file_content_creator.c++  file_content_creator.h  file_content_ref.h  filesystem_state.c++  filesystem_state.h  filters.h  format.pb.cc  format.pb.h  format.proto  globals.c++  globals.h  main.c++  piping.c++  piping.h  piping_blake2b.c++  piping_blake2b.h  piping_chacha.c++  piping_chapoly.c++  piping_chapoly.h  piping_csum.c++  piping_csum.h  piping_xxhash.c++  piping_xxhash.h  (+15 more)
archivarius/cli/: cmd_line_parser.c++  config.h  main.c++  property_tree.c++  test.c++
archivarius/tool/: cmd_line_parser.h  config.c++  main.c++  property_tree.h  test.c++
cmake/: AddFromArchive.cmake
docs/: config file format.md
libs/: protobuf-3.20.2.7z
libs/boost/: Jamroot  index.html
libs/boost/doc/: Jamfile.v2
libs/boost/doc/src/: boost.xml
libs/boost/libs/: maintainers.txt
libs/boost/libs/align/doc/: Jamfile.v2
libs/boost/libs/asio/doc/: Jamfile.v2
libs/boost/libs/atomic/doc/: Jamfile.v2  atomic.qbk
libs/boost/libs/atomic/test/: lockfree.cpp
libs/boost/libs/bind/doc/: Jamfile.v2
libs/boost/libs/bind/test/: Jamfile.v2
libs/boost/libs/compute/doc/: Jamfile.v2
libs/boost/libs/config/checks/: Jamfile.v2  test_case.cpp
libs/boost/libs/config/doc/: macro_reference.qbk
libs/boost/libs/config/test/: config_info.cpp  config_test.cpp
libs/boost/libs/container/doc/: Jamfile.v2  container.qbk
libs/boost/libs/context/: README.md
libs/boost/libs/context/doc/: Jamfile.v2  context.qbk  context.xml  execution_context_v2.qbk  performance.qbk  rationale.qbk
libs/boost/libs/context/test/: Jamfile.v2  test_execution_context_v2.impl
libs/boost/libs/convert/: index.html  makefile
libs/boost/libs/convert/doc/: 00_main.qbk  acknowledgments.qbk  algorithms.qbk  converters.qbk  converters_detail.qbk  default_converter.qbk  design_notes.qbk  getting_serious.qbk  getting_started.qbk  introduction.qbk  jamfile.v2  lexcast_converter.qbk  limitations.qbk  no_optional_interface.qbk  other.qbk  performance.qbk  rationale.qbk  section-end.qbk  stream_converter.qbk  strtol_converter.qbk  tools.qbk  user_types.qbk
libs/boost/libs/convert/example/: algorithms.cpp  default_converter.cpp  default_converter_fail.cpp  getting_serious.cpp  getting_started.cpp  lexical_cast.cpp  stream.cpp
libs/boost/libs/convert/test/: callable.cpp  encryption.cpp  fallbacks.cpp  has_member.cpp  is_converter.cpp  lcast_converter.cpp  performance.cpp  performance_spirit.cpp  prepare.hpp  printf_converter.cpp  sfinae.cpp  spirit_converter.cpp  str_to_int.cpp  stream_converter.cpp  strtol_converter.cpp  test.hpp  user_type.cpp
libs/boost/libs/core/doc/: Jamfile.v2
libs/boost/libs/coroutine2/doc/: Jamfile.v2  asymmetric.qbk  performance.qbk  stack.qbk
libs/boost/libs/coroutine2/example/: Jamfile.v2  simple.cpp
libs/boost/libs/dll/doc/: Jamfile.v2
libs/boost/libs/exception/test/: error_info_lv_const_test.cpp  error_info_lv_test.cpp  error_info_rv_const_test.cpp  error_info_rv_test.cpp
libs/boost/libs/fiber/doc/: Jamfile.v2  asio.qbk  channel.qbk  fibers.qbk  fibers.xml  integration.qbk  performance.qbk  rationale.qbk  scheduling.qbk  stack.qbk  when_any.qbk
libs/boost/libs/fiber/examples/: Jamfile.v2  ping_pong.cpp  wait_stuff.cpp
libs/boost/libs/graph/: README.md
libs/boost/libs/hana/: CMakeLists.txt
libs/boost/libs/hana/test/: lazy.cpp  (+11 more)
libs/boost/libs/phoenix/: ChangeLog
libs/boost/libs/python/: README.md  SConscript  SConstruct
libs/boost/libs/smart_ptr/: shared_ptr.htm
libs/boost/more/getting_started/: unix-variants.html  windows.html
libs/boost/status/: Jamfile.v2
libs/botan/: BUILD  CMakeLists.txt  Makefile  botan_all.cpp  botan_all.h  botan_all_internal.h  exports.lua  grab-list-of-files.sh  lib.lua  readme.txt
libs/coformat/: CMakeLists.txt  README.md  coformat.c++  coformat.h  main.c++
libs/fmt/: BUILD
libs/progress-bar/: CMakeLists.txt  README.md  example.apng  main.c++  progress_bar.c++  progress_bar.h
libs/protobuf/: BUCK  BUILD  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  exports.lua  lib.lua  libtool
libs/protobuf/benchmarks/: Makefile  Makefile.in
libs/protobuf/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  protobuf-lite.pc  protobuf.pc
libs/protobuf/conformance/: Makefile  Makefile.in
libs/protobuf/gmock/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
libs/protobuf/gmock/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libs/protobuf/gmock/gtest/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
libs/protobuf/gmock/scripts/: gmock-config
libs/protobuf/src/: Makefile  Makefile.in
libs/range-v3/: BUILD
libs/zstd/: BUILD  CMakeLists.txt  exports.lua  lib.lua
src/: archivarius.h  archive.c++  archive.h  buffer.c++  buffer.h  catalogue.c++  catalogue.h  checksum.h  checksumer.c++  checksumer.h  checksumer_blake2b.h  checksumer_xxhash.c++  checksumer_xxhash.h  cmd_line_parser.c++  cmd_line_parser.h  config.c++  config.h  encryption_params.c++  encryption_params.h  exception.c++  exception.h  file_content_creator.c++  file_content_creator.h  file_content_ref.h  filesystem_state.c++  filesystem_state.h  filters.c++  filters.h  format.pb.cc  format.pb.h  format.proto  globals.c++  globals.h  main.c++  piping.c++  piping.h  piping_aes.c++  piping_aes.h  piping_blake2b.c++  piping_blake2b.h  (+24 more)
test/: test-1s.conf
(+970 files in other folders)
